@@ -625,27 +625,6 @@
                 </select>
             </td>
         </tr>
-        <tr>
-            <td>
-                <?php echo __('CONFIGURE_POWER'); ?>:
-            </td>
-            <td>
-                <select name="color_power_graph" curveType="power" >
-                <?php 
-                    foreach($GLOBALS['LIST_GRAPHIC_COLOR'] as $value) {
-                        $color_lang = "COLOR_" . strtoupper($value);
-                        if($value == $color_power) {
-                            echo "<option value=\"" . $value . "\" selected >" . __($color_lang) . "</option>";
-                        } 
-                        else
-                        {
-                            echo "<option value=\"" . $value . "\" >" . __($color_lang) . "</option>";
-                        }
-                    }
-                ?>
-                </select>
-            </td>
-        </tr>
     </table>
 </div>
 
